@@ -4,7 +4,8 @@ Changelog
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- We can include images in sent email.
+  [thomasdesvenain]
 
 
 1.3 (2013-04-24)
